style.css
:root {
    --color-surface: #fff;
    --color-on-surface: #222;
    --color-primary: #7c0066;
    --color-primary-variant: #600051;
    --color-on-primary: #fff;
    --color-surface-1: #f8f8f8;
    --color-surface-2: #eee;
    --color-surface-3: #e8e8e8;
    --box-shadow: 0 4px 8px #00000030;
    --transition-duration: 0.2s;
}

:focus-visible {
    outline: 2px dashed var(--color-primary);
    outline-offset: 2px;
    transition-duration: 0s;
}

h1, h2, h3, h4, h5, h6, p {
    margin: 0;
}

body {
    margin: 0;
    background-color: var(--color-surface);
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
}

body, textarea {
    color: var(--color-on-surface);
    font-family: sans-serif;
    font-size: 16px;
    line-height: 1.5;
}

textarea {
    resize: block;
}

.content {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 24px;
    padding: 20px;
    max-width: 800px;
    width: 100%;
}

.section {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 20px;
    background-color: var(--color-surface-1);
    border-radius: 12px;
    padding: 24px;
    box-shadow: var(--box-shadow);
}

.title {
    color: var(--color-primary);
    font-size: 2.5rem;
    margin-bottom: 8px;
    text-align: center;
}

.create-task-form {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.label {
    display: flex;
    flex-direction: column;
    gap: 8px;
    font-weight: 500;
    cursor: pointer;
}

.label--inline {
    flex-direction: row;
    align-items: center;
}

.input {
    padding: 12px;
    border: 1px solid var(--color-on-surface);
    border-radius: 8px;
    font-size: 1rem;
    transition: all 0.2s ease;
    background-color: var(--color-surface);
}

.input[type="checkbox"] {
    margin: 0;
    width: 24px;
    height: 24px;
    accent-color: var(--color-primary);
    cursor: pointer;
}

.button {
    padding: 12px 24px;
    background-color: var(--color-primary);
    color: var(--color-on-primary);
    border: none;
    border-radius: 8px;
    font-size: 1rem;
    font-weight: 600;
    cursor: pointer;
    transition: var(--transition-duration);
    align-self: flex-start;

    &:hover {
        background-color: var(--color-primary-variant);
    }
}

.filters {
    display: flex;
    flex-wrap: wrap;
    gap: 12px;
    padding: 16px;
    background-color: var(--color-surface);
    box-shadow: var(--box-shadow);
    border-radius: 8px;
}

.tasks__list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 16px;
    list-style: none;
    padding: 0;
    margin: 0;

    @media (width <= 768px) {
        grid-template-columns: 1fr;
    }
}

.tasks__item {
    background-color: var(--color-surface);
    border-radius: 12px;
    padding: 20px;
    box-shadow: var(--box-shadow);
    transition-duration: var(--transition-duration);
}

.task {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 12px;
}

.task--completed {
    background-color: var(--color-surface-3);
}

.task__controls {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
}

.task__controls-label {
    display: flex;
    align-items: center;
    gap: 6px;
    font-size: 0.9rem;
}

